--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dateformat": "^5.0.3",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "fsa": "^0.5.1",
     "jsonfile": "^6.1.0",
     "moment": "^2.29.4",
     "nodemon": "^2.0.20",
